Added initial FlexGet version

--- a/roles/transmission/templates/settings.json.j2
+++ b/roles/transmission/templates/settings.json.j2
@@ -11,8 +11,8 @@
     "blocklist-enabled": false,
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
-    "dht-enabled": false,
-    "download-dir": "{{ complete_folder }}",
+    "dht-enabled": true,
+    "download-dir": "{{ transmission_complete_folder }}",
     "download-limit": 100,
     "download-limit-enabled": 0,
     "download-queue-enabled": true,
@@ -46,10 +46,10 @@
     "rpc-authentication-required": true,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
-    "rpc-password": "{{ rpc_password }}",
+    "rpc-password": "{{ transmission_rpc_password }}",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
-    "rpc-username": "{{ rpc_username }}",
+    "rpc-username": "{{ transmission_rpc_username }}",
     "rpc-whitelist": "127.0.0.1,192.168.0.*",
     "rpc-whitelist-enabled": true,
     "scrape-paused-torrents-enabled": true,
