--- a/roles/transmission/templates/settings.json.j2
+++ b/roles/transmission/templates/settings.json.j2
@@ -35,7 +35,7 @@
     "peer-port-random-on-start": true,
     "peer-socket-tos": "default",
     "pex-enabled": true,
-    "port-forwarding-enabled": false,
+    "port-forwarding-enabled": true,
     "preallocation": 1,
     "prefetch-enabled": 1,
     "queue-stalled-enabled": true,
