Added more series

--- a/roles/flexget/templates/series.yml.j2
+++ b/roles/flexget/templates/series.yml.j2
@@ -6,3 +6,39 @@ series:
   - Family Guy:
       identified_by: ep
       begin: S14E10
+  - Better Call Saul:
+      identified_by: ep
+      begin: S02E01
+  - Doctor Who:
+      identified_by: ep
+      begin: S10E01
+  - Fargo:
+      identified_by: ep
+      begin: S03E01
+  - Game of Thrones:
+      identified_by: ep
+      begin: S06E01
+  - Gotham:
+      identified_by: ep
+      begin: S02E12
+  - House of Cards:
+      identified_by: ep
+      begin: S04E01
+  - Masters of Sex:
+      identified_by: ep
+      begin: S04E01
+  - Mr Robot:
+      identified_by: ep
+      begin: S02E01
+  - Person of Interest:
+      identified_by: ep
+      begin: S05E01
+  - Sherlock:
+      identified_by: ep
+      begin: S04E01
+  - Supernatural:
+      identified_by: ep
+      begin: S11E10
+  - True Detective:
+      identified_by: ep
+      begin: S03E01
