Kodi and other changes

--- a/roles/flexget/templates/animes.yml.j2
+++ b/roles/flexget/templates/animes.yml.j2
@@ -6,3 +6,6 @@ series:
   - Naruto Shippuuden:
       identified_by: sequence
       begin: 442
+  - God Eater:
+      identified_by: sequence
+      begin: 10
