--- a/roles/transmission/templates/settings.json.j2
+++ b/roles/transmission/templates/settings.json.j2
@@ -57,10 +57,10 @@
     "script-torrent-done-filename": "",
     "seed-queue-enabled": false,
     "seed-queue-size": 10,
-    "speed-limit-down": 100,
-    "speed-limit-down-enabled": false,
-    "speed-limit-up": 100,
-    "speed-limit-up-enabled": false,
+    "speed-limit-down": 1000,
+    "speed-limit-down-enabled": true,
+    "speed-limit-up": 200,
+    "speed-limit-up-enabled": true,
     "start-added-torrents": true,
     "trash-original-torrent-files": false,
     "umask": 18,
