--- a/roles/transmission/templates/settings.json.j2
+++ b/roles/transmission/templates/settings.json.j2
@@ -6,7 +6,7 @@
     "alt-speed-time-enabled": false,
     "alt-speed-time-end": 1020,
     "alt-speed-up": 50,
-    "bind-address-ipv4": "127.0.0.1",
+    "bind-address-ipv4": "0.0.0.0",
     "bind-address-ipv6": "::",
     "blocklist-enabled": false,
     "blocklist-url": "http://www.example.com/blocklist",
@@ -41,13 +41,13 @@
     "queue-stalled-enabled": true,
     "queue-stalled-minutes": 30,
     "ratio-limit": 2,
-    "ratio-limit-enabled": false,
+    "ratio-limit-enabled": true,
     "rename-partial-files": true,
     "rpc-authentication-required": true,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
     "rpc-password": "{{ transmission_rpc_password }}",
-    "rpc-port": 9091,
+    "rpc-port": {{ transmission_rpc_port }},
     "rpc-url": "/transmission/",
     "rpc-username": "{{ transmission_rpc_username }}",
     "rpc-whitelist": "127.0.0.1,{{ network_mask }}",
