--- a/roles/flexget/templates/animes.yml.j2
+++ b/roles/flexget/templates/animes.yml.j2
@@ -9,3 +9,6 @@ series:
   - God Eater:
       identified_by: sequence
       begin: 10
+  - Mobile Suit Gundam Thunderbolt:
+      identified_by: sequence
+      begin: 2
