--- a/roles/transmission/templates/settings.json.j2
+++ b/roles/transmission/templates/settings.json.j2
@@ -12,7 +12,6 @@
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
     "dht-enabled": true,
-    "download-dir": "{{ transmission_complete_folder }}",
     "download-limit": 100,
     "download-limit-enabled": 0,
     "download-queue-enabled": true,
@@ -20,8 +19,6 @@
     "encryption": 1,
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "{{ incomplete_folder }}",
-    "incomplete-dir-enabled": true,
     "lpd-enabled": false,
     "max-peers-global": 200,
     "message-level": 1,
@@ -40,7 +37,7 @@
     "prefetch-enabled": 1,
     "queue-stalled-enabled": true,
     "queue-stalled-minutes": 30,
-    "ratio-limit": 2,
+    "ratio-limit": {{ min_ratio }},
     "ratio-limit-enabled": true,
     "rename-partial-files": true,
     "rpc-authentication-required": true,
