--- a/roles/flexget/templates/animes.yml.j2
+++ b/roles/flexget/templates/animes.yml.j2
@@ -1,14 +1,12 @@
 ---
 series:
-  - One Punch Man:
-      identified_by: sequence
-      begin: 12
   - Naruto Shippuuden:
       identified_by: sequence
-      begin: 443
+      begin: 444
   - God Eater:
       identified_by: sequence
       begin: 10
-  - Mobile Suit Gundam Thunderbolt:
+  - Mobile Suit Gundam Iron-Blooded Orphans:
       identified_by: sequence
-      begin: 2
+      begin: 1
+
