--- a/roles/transmission/templates/settings.json.j2
+++ b/roles/transmission/templates/settings.json.j2
@@ -1,10 +1,10 @@
 {
-    "alt-speed-down": 50,
+    "alt-speed-down": 100,
     "alt-speed-enabled": false,
-    "alt-speed-time-begin": 540,
+    "alt-speed-time-begin": 1080,
     "alt-speed-time-day": 127,
-    "alt-speed-time-enabled": false,
-    "alt-speed-time-end": 1020,
+    "alt-speed-time-enabled": true,
+    "alt-speed-time-end": 1425,
     "alt-speed-up": 50,
     "bind-address-ipv4": "127.0.0.1",
     "bind-address-ipv6": "::",
@@ -12,6 +12,9 @@
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
     "dht-enabled": true,
+    "download-dir": "{{ transmission_download_folder }}",
+    "incomplete-dir": "{{ transmission_incomplete_folder }}",
+    "incomplete-dir-enabled": true,
     "download-limit": 100,
     "download-limit-enabled": 0,
     "download-queue-enabled": true,
